syntax = "proto3";

package api.admin.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/xiaohubai/go-grpc-layout/api/admin/v1;v1";
option java_multiple_files = true;
option java_package = "api.admin.v1";


service Admin {
	rpc Login (LoginRequest) returns (LoginResponse){
		option (google.api.http) = {
			post : "/v1/login"
			body : "*"
		  };
	};

}

message LoginRequest {
	string userName = 1 [(validate.rules).string = {min_len: 3, max_len: 11}];
	string password = 2 [(validate.rules).string.min_len = 6];
	string captcha = 3 [(validate.rules).string.len = 6];
	string captchaID = 4 [(validate.rules).string.min_len = 6];
}

message LoginResponse {
	int32 code = 1;
	string msg = 2;
	string traceID = 3;
	message Data { map<string, string> dictMap = 1; }
	Data data = 4;
}
