syntax = "proto3";
package kratos.api;

option go_package = "github.com/xiaohubai/go-grpc-layout/internal/configs;configs";

import "google/protobuf/duration.proto";

message Configs {
  Global global = 1;
  Server server = 2;
  Dao dao = 3;
  Auth auth = 4;
  Trace trace = 5;
  Zap zap = 6;
}

message Global {
  string app_name = 1;
  string env = 2;
  string version = 3;
  string id = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Dao {
  message Mysql {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Mysql mysql = 1;
  Redis redis = 2;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
    bool health_check = 3;
  }
  Consul consul = 1;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
}

message Trace { string endpoint = 1; }

message Zap {
  string level = 1;
  string format = 2;
  string filename = 3;
  int32 max_size = 4;
  int32 max_backups = 5;
  int32 max_age = 6;
  bool compress = 7;
}